<resources>
    <string name="app_name">Event Manager</string>
    <string name="action_register">Register</string>
    <string name="action_contact">Contact</string>
    <string name="text_name">Name</string>
    <string name="text_emp_id">Employee ID</string>
    <string name="text_lab_item">Lab Item</string>
    <string name="text_produce_at">Produce At</string>
    <string name="text_problem_stmt">Problem\nStatement</string>

    <string-array name="array_name">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Location Info</string>
    <string name="tab_text_2">Agenda</string>
    <string name="tab_text_3">Contact Details</string>
    <string name="tab_text_4">Speakers</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
